--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "name": "distilleries/logentries",
-    "description": "",
     "license": "MIT",
     "authors": [
         {
@@ -8,11 +7,10 @@
             "email": "kezho@me.com"
         }
     ],
-    "minimum-stability": "stable",
     "require": {
         "php": ">=5.6.4",
-        "logentries/logentries": "^1.6",
-        "illuminate/log": "^5.3"
+        "illuminate/log": "^5.3",
+        "logentries/logentries": "^1.6"
     },
     "require-dev": {
         "orchestra/testbench": "3.3.*",
@@ -24,5 +22,6 @@
         "psr-4": {
             "Distilleries\\Logentries\\": "src/Distilleries/Logentries"
         }
-    }
+    },
+    "minimum-stability": "stable"
 }
